# baxter_pick_and_place_sim

./: .gitignore  CMakeLists.txt  README.md  package.xml
scripts/: pick_and_place.py
