<?xml version="1.0"?>
<package>
  <name>baxter_pick_and_place_sim</name>
  <version>1.0.0</version>
  <description>The baxter_pick_and_place_sim package</description>

  <maintainer email="Gyan.Tatiya@tufts.edu">
  </maintainer>

  <license>BSD</license>
  <url type="website">https://www.eecs.tufts.edu/~gtatiya/</url>
  <url type="repository">
    https://github.com/gtatiya/baxter_pick_and_place_sim
  </url>
  <url type="bugtracker">
    https://github.com/gtatiya/baxter_pick_and_place_sim/issues
  </url>
  <author>Gyan Tatiya</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_gazebo</build_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>baxter_tools</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>baxter_gazebo</run_depend>
  <run_depend>baxter_interface</run_depend>
  <run_depend>baxter_tools</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_msgs</run_depend>
 
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>

</package>
